gitops/apps/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
spec:
  selector:
    app: lldap
  ports:
    - name: ldap
      port: 3890
      targetPort: ldap
    - name: http
      port: 17170
      targetPort: http
